Import changes from 15w31b